# flightdeck

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  FOLLOWUPS.md  KNOWN_ISSUES.md  METHODOLOGY.md  Makefile  README.md  RELEASING.md  SECURITY.md  audit-phase-1.md  audit-phase-2.md  audit-phase-3.md  audit-phase-4.5.md  audit-phase-4.md  pricing.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: README.md  architect.md  code-fixer.md  doc-expert.md  go-principal.md  python-principal.md  qa-engineer.md  security-reviewer.md  ts-principal.md
.claude/commands/: audit-repo.md
.github/workflows/: ci.yml  release.yml
api/: Dockerfile  Makefile  go.mod  go.sum
api/cmd/: main.go
api/docs/: docs.go  embed.go  swagger.json  swagger.yaml
api/tests/: handler_test.go
dashboard/: .dockerignore  .gitignore  Dockerfile  Makefile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
dashboard/public/: runtime-config.json
dashboard/src/: App.tsx  main.tsx
demo_helpers/: README.md  emit_demo_fleet.py  fire_killswitch.py  launch_with_flavor.py  provision_policies.py  seed_history.py
docker/: .env.example  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.dev.conf  nginx.prod.conf
docker/postgres/: init.sql  seed-dev.sql
docs/: 404.html  CNAME  admin-endpoints.md  index.html  phase-7-close-audit.md  phase-7-event-audit.md  reconcile-agents-endpoint.md
docs/smoke/: scenario-1-reconnect.md
helm/: .helmignore  Chart.yaml  Makefile  values.prod.yaml  values.yaml
helm/migrations/: 000001_initial_schema.down.sql  000003_add_degrade_to_directives.up.sql  000004_add_custom_directives.up.sql  000006_add_context_to_sessions.up.sql  000007_directive_fingerprint_flavor_key.down.sql  000007_directive_fingerprint_flavor_key.up.sql  000008_add_last_attached_at_to_sessions.down.sql  000008_add_last_attached_at_to_sessions.up.sql  000009_session_attachments.down.sql  000010_api_tokens.down.sql  000010_api_tokens.up.sql  000011_sessions_token.down.sql  000011_sessions_token.up.sql  000012_rename_access_tokens.down.sql  000017_sub_agent_observability.up.sql
helm/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  migrations-configmap.yaml  rbac.yaml  secret.yaml
ingestion/: Dockerfile  Makefile  go.mod  go.sum
ingestion/cmd/: main.go
ingestion/docs/: docs.go  embed.go  swagger.json  swagger.yaml
ingestion/tests/: handler_test.go
playground/: 01_direct_anthropic.py  02_direct_openai.py  03_langchain.py  04_langgraph.py  05_llamaindex.py  06_crewai.py  07_directives.py  08_enforcement.py  09_capture.py  10_killswitch.py  11_unavailability.py  12_litellm.py  13_mcp.py  14_claude_code_plugin.py  15_bifrost.py  16_subagents_crewai.py  17_subagents_langgraph.py  18_mcp_policy_warn.py  19_mcp_policy_block.py  20_mcp_policy_block_on_uncertainty.py  21_mcp_policy_blocklist.py  22_mcp_policy_crewai.py  23_mcp_policy_langgraph.py  24_mcp_policy_langchain.py  25_mcp_policy_llamaindex.py  26_mcp_policy_template_apply.py  README.md  _helpers.py  _mcp_reference_server.py  _secondary_mcp_server.py  mcp_demo_basic.py  mcp_demo_langchain.py  mcp_demo_multi_server.py  mcp_demo_secondary_server.py  policy_demo_block.py  policy_demo_degrade.py  policy_demo_forced_degrade.py  policy_demo_warn.py  run_all.py
plugin/: README.md  package.json
plugin/.claude-plugin/: manifest.json  plugin.json
plugin/hooks/: hooks.json
plugin/skills/: flightdeck.md
plugin/tests/: agent_id.test.mjs  dispatchers.test.mjs  mcp_identity.test.mjs  mcp_policy.test.mjs  observe_cli.test.mjs  remembered_decisions.test.mjs  uuid5.test.mjs
scripts/: release.sh
sensor/: Makefile  README.md  pyproject.toml
sensor/flightdeck_sensor/: __init__.py  config.py  provider.py
sensor/flightdeck_sensor/compat/: __init__.py  crewai_mcp.py
sensor/flightdeck_sensor/core/: agent_id.py  context.py  errors.py  exceptions.py  mcp_policy.py  policy.py  schemas.py  session.py  types.py
sensor/flightdeck_sensor/interceptor/: anthropic.py  base.py  crewai.py  langgraph.py  litellm.py  mcp.py  mcp_identity.py  openai.py
sensor/flightdeck_sensor/providers/: anthropic.py  litellm.py  openai.py  protocol.py
sensor/flightdeck_sensor/transport/: client.py  retry.py
sensor/tests/: conftest.py
sensor/tests/unit/: test_agent_id.py  test_agent_type_validation.py  test_compat_crewai_mcp.py  test_context.py  test_cross_agent_messages.py  test_custom_directives.py  test_d150_tool_capture_destination.py  test_errors.py  test_framework_attribution.py  test_interceptor.py  test_interceptor_crewai.py  test_interceptor_langgraph.py  test_llm_event_enrichment.py  test_mcp_identity.py  test_mcp_interceptor.py  test_mcp_policy_emission_enriched.py  test_mcp_policy_enforcement.py  test_mcp_policy_enforcement_all_paths.py  test_originating_event_id.py  test_patch.py  test_policy.py  test_policy_decision_summary.py  test_policy_emission_enriched.py  test_policy_events.py  test_prompt_capture.py  test_provider_enum.py  test_providers.py  test_session.py  test_session_lifecycle_enrichment.py  test_transport.py
tests/e2e-fixtures/: canonical.json  seed.py
tests/fixtures/: mcp_identity_vectors.json
tests/integration/: conftest.py  test_admin_reconcile.py  test_agent_id_parity.py  test_agent_type_client_type_pairing.py  test_analytics.py  test_cross_agent_messages.py  test_directives.py  test_enforcement.py  test_events_agent_filter.py  test_events_facets.py  test_fleet_recent_sessions.py  test_fleet_runtime_context.py  test_framework_patching.py  test_killswitch.py  test_mcp_events.py  test_mcp_fixture_seed.py  test_mcp_policy_api.py  test_mcp_policy_pipeline.py  test_phase4_event_shapes.py  test_pipeline.py  test_policy.py  test_policy_events.py  test_prompt_capture.py  test_search.py  test_sensor_e2e.py  test_ui_demo.py  (+7 more)
workers/: Dockerfile  Makefile  go.mod  go.sum
(+601 files in other folders)
