[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flightdeck-sensor"
version = "0.2.0"
description = "In-process agent observability sensor for Flightdeck"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai = ["openai>=1.0", "tiktoken>=0.5"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "httpx>=0.25",
    # Used by tests/integration/test_sensor_e2e.py to mock provider HTTP
    # so the sensor can be exercised end-to-end against a live stack
    # without real Anthropic / OpenAI tokens. See Phase 4.5 audit Part 5.
    "respx>=0.20",
    "anthropic>=0.20",
    "openai>=1.0",
    # Used by tests/integration/test_framework_patching.py to verify
    # that flightdeck_sensor.patch() transparently intercepts LLM calls
    # made through agent frameworks without any explicit wrap() call.
    # The framework instantiates its own internal Anthropic / OpenAI
    # client; the sensor's class-level patching descriptor wraps it
    # on first .messages / .chat access. See Phase 4.5+ Phase 3.
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "llama-index-llms-anthropic>=0.1",
    "llama-index-llms-openai>=0.1",
    # CrewAI 1.14+ ships native provider classes that use the official
    # openai/anthropic SDKs directly (NOT litellm). The default
    # LLM(model=...).call(...) flow is intercepted via the sensor's
    # OpenAI.chat / Anthropic.messages descriptors. Beta paths
    # (responses API, beta.messages, beta.chat.completions.parse) are
    # NOT intercepted -- documented as a known constraint in
    # ARCHITECTURE.md "Framework limitations". See
    # test_crewai_native_openai_patched_intercepts_call.
    "crewai>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["flightdeck_sensor"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
